--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "angular-ui-bootstrap": "^1.2.4",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
-    "path": "^0.12.7"
+    "normalize-css": "^2.3.1",
+    "path": "^0.12.7",
+    "reset.css": "^2.0.2"
   }
 }
